--- a/index.html
+++ b/index.html
@@ -3,19 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Cyberpunk Portfolio</title>
-    <link rel="stylesheet" href="styles.css"> <!-- Link către fișierul CSS -->
+    <title>Products</title>
+    <link rel="stylesheet" href="styles.css">
+    </script>
+    <link href="https://cdn.prod.website-files.com/66e93bb040c86a7d79f1d882/66e96135e9395c7575112986_favicon-32x32.png" rel="shortcut icon" type="image/x-icon"/>
+    <link href="https://cdn.prod.website-files.com/66e93bb040c86a7d79f1d882/66e961617a4b02f53495ab0a_android-chrome-256x256.png" rel="apple-touch-icon"/>
 </head>
 <body>
-
 <header>
-    <h1>Cyberpunk Portfolio</h1>
+    <h1>Welcome <3</h1>
     <div class="money-info">Money: 386 Lei</div>
 </header>
 
 <section id="about">
     <h2>About</h2>
-    <p>Here are all the products I have purchased to create or store AMVs.</p> <!-- Text actualizat -->
+    <p>Here are all the products I have purchased to create or store AMVs.</p>
 </section>
 
 <section id="products">
@@ -26,7 +28,6 @@
             <h3>USB Memory 55GB</h3>
             <div class="price">Price: 48 Lei</div>
         </div>
-        <!-- Adaugă mai multe produse aici -->
     </div>
 </section>
 
