--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <h2>Products</h2>
     <div class="grid-container">
         <div class="item">
-            <img src="https://s13emagst.akamaized.net/products/32623/32622538/images/res_f5c2e1480be0f6bb99a53fc349ed4477.jpg?width=720&height=720&hash=87C48554344A881E2E8213BDFBFAFF22" alt="USB Memory">
+            <img src="https://blogger.googleusercontent.com/img/a/AVvXsEg7Y1-LDizH3k61QEkMoNrdDqX3X5guBIOOqlXUepBkQmAx2ArnSn3oV2aoHFOY9Mn_7qGoVqxGDXM0v042Y46bcTUqnKjVC4vQKO9Zrk0E-Q11UnIw-VUvxJb57PrNLyQ7VJiuDX_IUSRYU-BqrJkj0EhyBX1nCuVIzyzD1jSwlnjeZ7HZWtEuvU-hofoq=w200-h200?width=720&height=720&hash=87C48554344A881E2E8213BDFBFAFF22" alt="USB Memory">
             <h3>USB Memory 55GB</h3>
             <div class="price">Price: 48 Lei</div>
         </div>
