--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Products</title>
     <link rel="stylesheet" href="styles.css">
-    </script>
     <link href="https://cdn.prod.website-files.com/66e93bb040c86a7d79f1d882/66e96135e9395c7575112986_favicon-32x32.png" rel="shortcut icon" type="image/x-icon"/>
     <link href="https://cdn.prod.website-files.com/66e93bb040c86a7d79f1d882/66e961617a4b02f53495ab0a_android-chrome-256x256.png" rel="apple-touch-icon"/>
 </head>
@@ -27,6 +26,11 @@
             <img src="https://blogger.googleusercontent.com/img/a/AVvXsEg7Y1-LDizH3k61QEkMoNrdDqX3X5guBIOOqlXUepBkQmAx2ArnSn3oV2aoHFOY9Mn_7qGoVqxGDXM0v042Y46bcTUqnKjVC4vQKO9Zrk0E-Q11UnIw-VUvxJb57PrNLyQ7VJiuDX_IUSRYU-BqrJkj0EhyBX1nCuVIzyzD1jSwlnjeZ7HZWtEuvU-hofoq=w200-h200?width=720&height=720&hash=87C48554344A881E2E8213BDFBFAFF22" alt="USB Memory">
             <h3>USB Memory 55GB</h3>
             <div class="price">Price: 48 Lei</div>
+        </div>
+        <div class="item">
+            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEjfPrWmNRDCcOHgirv6RJUypxDt7S2qc2w28mM-Y2MSahrnWeLmllX6ZcS7bHGj04DBY-ccBUuZVvEhLASZwlkTzRF_jnvMkVv5vx2oWne20c6ZVV2_MQbrHuvO9-pq1dYjphOcgcW7FzebqFKZYYR6kL_BPN-SbPTSnlxBnSWEuABNjzA/s1600/res_2a051e53015d4cd6679a64cfaeb882b3.png" alt="External Hard Drive">
+            <h3>External Hard Drive 500GB</h3>
+            <div class="price">Price: 97 Lei</div>
         </div>
     </div>
 </section>
